# Doormat

./: .env.example  .gitignore  AGENTS.md  BUILD-GUIDE.md  CLAUDE.md  COST-GUIDE.md  Dockerfile  Makefile  PRODUCT.md  PROMPTS.md  README.md  alembic.ini  docker-compose.yml  listing-extraction-v2.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  plan.md  specification.md  speckit-reconciliation.md  tasks.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 278e194b41b8_add_pm_scrape_health_columns.py  3ad06cbfbd4c_add_api_config_fields_to_preferences.py  4070433b0e60_add_fast_model_and_smart_model_to_.py  5a704cddeda2_add_discovery_runs_and_logs_tables.py  8f1a2c3d4b5e_add_search_runs_events_results.py  a03ef5a832c6_initial_schema_preferences_property_.py  b0990f11c00d_add_api_recipe_json_to_extraction_.py  c7e8f9a0b1c2_add_coords_prompt_overrides_geocode_cache.py  d5e6f7a8b9c0_add_extraction_attempts_to_search_runs.py  dd309f94683e_add_listing_score_saved_fields.py  e1a2b3c4d5e6_add_trusted_sources_table.py  f2c809279f73_add_sources_enabled_and_source.py
docs/: sources.md
docs/contributing/: adding-a-source.md
docs/patches/: 01-api-recipe-patch.md  02-contributor-skill.md  README.md
evals/: __init__.py  conftest.py
evals/classifier/: test_classifier_eval.py
evals/discovery/: test_discovery_eval.py
evals/extraction/: test_extraction_eval.py
evals/scoring/: test_scoring_eval.py
scripts/: generate_craigslist_regions.py
specs/004-listing-scoring-frontend/: spec.md  tasks.md
specs/005-interactive-agent-runs/: plan.md  quickstart.md  spec.md  tasks.md
specs/006-portfolio-pitch-completion/: spec.md
specs/007-api-recipe-mode-a0/: plan.md  spec.md  tasks.md
specs/008-contribute-rental-source/: plan.md  spec.md  tasks.md
specs/009-trusted-sources/: plan.md  quickstart.md  spec.md  tasks.md
src/frontend/: README.md  eslint.config.mjs  openapi.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
strategies/: pilot-pm.json
tests/: __init__.py  conftest.py  test_batch_extraction.py  test_config.py  test_craigslist_regions.py  test_db.py  test_discovery_search_run_bridge.py  test_extraction.py  test_extraction_api.py  test_extraction_attempts.py  test_listings_api.py  test_llm_client.py  test_main.py  test_mode_b_network.py  test_openrouter_api.py  test_pipeline_trusted_sources.py  test_preference_prompts_api.py  test_preferences_api.py  test_prompt_registry.py  test_run_filters.py  test_run_suggestions.py  test_scoring.py  test_scrape_urls.py  test_search_run_events.py  test_search_runs_api.py  test_trusted_sources.py  test_trusted_sources_api.py
tests/discovery/: __init__.py  test_agent.py  test_api.py  test_browser.py  (+4 more)
(+144 files in other folders)
