[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doormat"
version = "0.1.0"
description = "AI-first rental finder - autonomous agent discovers property managers, generates scrapers, scores listings"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Doormat Contributors", email = "hello@doormat.local"}
]
keywords = ["ai", "rental", "rental-finder", "agent", "scraper", "property-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "openai>=1.0.0",
    "instructor>=0.3.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/josh-sepirak/Doormat"
Repository = "https://github.com/josh-sepirak/Doormat.git"
Documentation = "https://josh-sepirak.github.io/Doormat"
"Issue Tracker" = "https://github.com/josh-sepirak/Doormat/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-select = ["I", "E", "W", "F", "C", "B"]
extend-ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["doormat"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["migrations/", "tests/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v --cov=src/backend --cov-report=term-missing:skip-covered"

[tool.coverage.run]
branch = true
source = ["src/backend"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
